# clp-core-go

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  clp-core.sh  clp.go  embed_linux_stub.go  go.mod
.github/workflows/: build-binaries.yml
cmd/testrun/: BUILD.bazel  main.go
internal/extract/: BUILD.bazel  extract.go  extract_test.go
scripts/: BUILD.bazel  build-tarball-bazel.sh  build-tarball.sh  generate-embed-go.sh  generate-embeds.sh  go-generate.sh
